change index2 direct to m3u8

--- a/fm916/select.html
+++ b/fm916/select.html
@@ -24,11 +24,11 @@ var browser={
 <script type="text/javascript">// <![CDATA[
 if (/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent)) {
     //alert(navigator.userAgent);  
-    window.location.href ="/iPhone.html";
+    window.location.href ="/fm916/iPhone.html";
 } else if (/(Android)/i.test(navigator.userAgent)) {
     //alert(navigator.userAgent); 
-    window.location.href ="/Android.html";
+    window.location.href ="/fm916/Android.html";
 } else {
-    window.location.href ="/phone.html";
+    window.location.href ="/fm916/phone.html";
 };
 // ]]></script>
