--- a/listen.html
+++ b/listen.html
@@ -4,8 +4,48 @@
 <title>阳江广播电台</title>
 <link rel="stylesheet" href="/css/reset.css">
 <link rel="stylesheet" href="/css/style.css" media="screen" type="text/css">
+    <script type="text/javascript"> 
+function startTime(){ 
+var today=new Date(); 
+var strDate=(" "+today.getFullYear()+"年"+(today.getMonth()+1)+"月"+today.getDate()+"日"); 
+var n_day=today.getDay(); 
+switch(n_day){ 
+case 0: 
+{strDate=strDate+" 星期日 "}break; 
+case 1: 
+{strDate=strDate+" 星期一 "}break; 
+case 2: 
+{strDate=strDate+" 星期二 "}break; 
+case 3: 
+{strDate=strDate+" 星期三 "}break; 
+case 4: 
+{strDate=strDate+" 星期四 "}break; 
+case 5: 
+{strDate=strDate+" 星期五 "}break; 
+case 6: 
+{strDate=strDate+" 星期六 "}break; 
+case 7: 
+{strDate=strDate+" 星期日 "}break; 
+} 
+//增加时分秒 
+// add a zero in front of numbers<10 
+var h=today.getHours(); 
+var m=today.getMinutes(); 
+var s=today.getSeconds() 
+m=checkTime(m); 
+s=checkTime(s); 
+strDate=strDate+" "+h+":"+m+":"+s; 
+document.getElementById('txt').innerHTML=strDate; 
+t=setTimeout('startTime()',500) 
+} 
+
+function checkTime(i){ 
+if (i<10) {i="0" + i} 
+return i 
+} 
+</script> 
 </head>
-<body class="keBody">
+<body class="keBody" onload="startTime()">
 <h1 class="keTitle" style="font-size: 50px;">阳江广播电台 </h1>
 <div class="kePublic" style="height:100%!important;">
 <!--效果html开始-->
@@ -13,11 +53,11 @@
   <div style="background-image: url(http://static.tumblr.com/egqxakl/ht9nsz8j1/yqb0erk.jpg
 );" class="album"></div>
   <div class="controls">
-      <div id="time" style="font-size: 50px; color: #fff; padding: 50px 0 0;">    
-<script>     
+      <div id="txt" style="font-size: 50px; color: #fff; padding: 50px 0 0;">    
+<!--<script>     
 document.getElementById('time').innerHTML=new Date().toLocaleString();     
 setInterval("document.getElementById('time').innerHTML=new Date().toLocaleString();",1000);  
-</script>    
+</script>-->    
 </div>  
     <!--<div class="time current jp-current-time"><script>     
 document.getElementById('time').innerHTML=new Date().toLocaleString();     
