change index to index.original &..
change index to index.original & index2 to index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="refresh" content="5; url=/radio.html"> 
+        <meta http-equiv="refresh" content="5; url=/listen.html"> 
     <style>
         img { 
             height: auto; 
