--- a/index.original.html
+++ b/index.original.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="refresh" content="5; url=/listen.html"> 
+        <meta http-equiv="refresh" content="5; url=/radio.html"> 
     <style>
         img { 
             height: auto; 
