change pic overflow=hidden
change pic overflow=hidden

--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
     <head>
         <meta http-equiv="refresh" content="5; url=/listen.html"> 
     <style>
+        body {padding: 0; margin: 0;
+            background:url(/images/bg.jpg) center no-repeat;
+        }
+        body,html{height: 100%;}
         img { 
             height: auto; 
             width: auto\9; 
-            width:100%; 
+            width: 100%; 
+            overflow:hidden;
             } 
     </style>
     </head>
     <body>
-        <img src="/images/bg.jpg" width="540" height="960" alt="" />
+        <!--
+        <img src="/images/bg.jpg" />
+-->
     </body>
 </html>
 
