change m4a to mp3 include url(src)
change m4a to mp3 include url(src) http://hls.qingting.fm/live  to  http://http.hz.qingting.fm

--- a/fm964/Android.html
+++ b/fm964/Android.html
@@ -9,5 +9,5 @@
 </head>
 
     <frameset rows="100%" border="0" frameborder="0" framespacing="0" framecolor="#000000">
-    <frame src="http://hls.qingting.fm/live/3947.mp3" scrolling="auto"></frameset>
+    <frame src="http://http.hz.qingting.fm/3947.mp3" scrolling="auto"></frameset>
     </html>
