--- a/fm964/select.html
+++ b/fm964/select.html
@@ -28,6 +28,9 @@ if (/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent)) {
 } else if (/(Android)/i.test(navigator.userAgent)) {
     //alert(navigator.userAgent); 
     window.location.href ="/fm964/Android.html";
+} else if (/(Trident)/i.test(navigator.userAgent)) {
+    //alert(navigator.userAgent); 
+    window.location.href ="/fm964/Winphone.html";
 } else {
     window.location.href ="/fm964/phone.html";
 };
