--- a/fm964/select.html
+++ b/fm964/select.html
@@ -27,7 +27,7 @@ if (/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent)) {
     window.location.href ="/fm964/iPhone.html";
 } else if (/(Android)/i.test(navigator.userAgent)) {
     //alert(navigator.userAgent); 
-    window.location.href ="/fm964/Android.html";
+    window.location.href ="/fm964/phone.html";
 } else if (/(Trident)/i.test(navigator.userAgent)) {
     //alert(navigator.userAgent); 
     window.location.href ="/fm964/Winphone.html";
