--- a/fm916/select.html
+++ b/fm916/select.html
@@ -27,7 +27,7 @@ if (/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent)) {
     window.location.href ="/fm916/iPhone.html";
 } else if (/(Android)/i.test(navigator.userAgent)) {
     //alert(navigator.userAgent); 
-    window.location.href ="/fm916/Android.html";
+    window.location.href ="/fm916/phone.html";
 } else if (/(Trident)/i.test(navigator.userAgent)) {
     //alert(navigator.userAgent); 
     window.location.href ="/fm916/Winphone.html";
