add title for channel

--- a/listen.html
+++ b/listen.html
@@ -70,7 +70,10 @@ setInterval("document.getElementById('time').innerHTML=new Date().toLocaleString
       <ul style="overflow: hidden; display: block;">
           <li class="jp-playlist-current">
               <div>
-           <a href="/fm964/select.html" class="jp-playlist-item jp-playlist-current" tabindex="1" style="color: #fff!important;">FM 89.5</a></div></li></ul>
+           <a href="/fm964/select.html" class="jp-playlist-item jp-playlist-current" tabindex="1" style="color: #fff!important;">FM 89.5</a></div></li>
+          <li class="jp-playlist-current">
+              <div><p style="font-size:40px; color:white;">旅游环保广播</p></div></li> 
+           </ul>
     </div>
     </div>
 
@@ -83,6 +86,8 @@ setInterval("document.getElementById('time').innerHTML=new Date().toLocaleString
           <li class="jp-playlist-current">
               <div>
                   <a href="/fm916/select.html" class="jp-playlist-item jp-playlist-current" tabindex="1" style="color: #fff!important;">FM 91.6</a></div></li>
+                  <li class="jp-playlist-current">
+              <div><p style="font-size:40px; color:white;">综合资讯广播</p></div></li>
           </ul>
     </div>
     </div>
