--- a/fm964/iPhone.html
+++ b/fm964/iPhone.html
@@ -1,6 +1,6 @@
 <html><head>
     
-    <title>欢迎收听阳江电台FM964</title>
+    <title>阳江电台FM89.5</title>
     <style type="text/css">figure {margin: 0;}</style>
 <meta name="robots" content="noindex">
 </style>
