--- a/listen.html
+++ b/listen.html
@@ -106,7 +106,7 @@ setInterval("document.getElementById('time').innerHTML=new Date().toLocaleString
 <div class="clear"></div>
 </div>
 <div class="keBottom">
-<p class="keTxt"><strong><a color="white" href="http://m.yjbctv.com/" target="_blank">WWW.YJBCTV.COM&nbsp;©</a></strong></p><p>Support by CROTEL </p>
+<p class="keTxt"><strong><a color="white" href="http://m.yjbctv.com/" target="_blank" style="font-size:30px;">版权所有:阳江广播电视台©</a></strong></p><p style="font-size:20px;">Support by CROTEL </p>
 </div>
 
 
