--- a/fm964/phone.html
+++ b/fm964/phone.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>阳江广播电台</title>
+<title>阳江电台</title>
 <link rel="stylesheet" href="/fm964/css/reset.css">
 <link rel="stylesheet" href="/fm964/css/style.css" media="screen" type="text/css" />
 </head>
