--- a/listen.html
+++ b/listen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>阳江广播电台</title>
+<title>阳江广播电视台</title>
 <link rel="stylesheet" href="/css/reset.css">
 <link rel="stylesheet" href="/css/style.css" media="screen" type="text/css">
     <script type="text/javascript"> 
@@ -46,7 +46,7 @@ return i
 </script> 
 </head>
 <body class="keBody" onload="startTime()">
-<h1 class="keTitle" style="font-size: 50px;">阳江广播电台 </h1>
+<h1 class="keTitle" style="font-size: 50px;">阳江电台 </h1>
 <div class="kePublic" style="height:100%!important;">
 <!--效果html开始-->
   <div class="music-player jp-video-270p">
