--- a/fm916/select.html
+++ b/fm916/select.html
@@ -24,7 +24,7 @@ var browser={
 <script type="text/javascript">// <![CDATA[
 if (/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent)) {
     //alert(navigator.userAgent);  
-    window.location.href ="/fm916/iPhone.html";
+    window.location.href ="/fm916/phone.html";
 } else if (/(Android)/i.test(navigator.userAgent)) {
     //alert(navigator.userAgent); 
     window.location.href ="/fm916/phone.html";
