--- a/redirect.html
+++ b/redirect.html
@@ -66,7 +66,7 @@ window.onload = tick;
 <body>
 <table align="center">
 <tr>
-<td><span id="Clock"></span></td>
+<td><span id="Clock" style="font-size:30px;"></span></td>
 </tr></table>
 </body>
 </html>
